feat(audit): Phase 14 审计与变更追踪重做 + Phase 13 后修正补齐
按 docs/record/phase/14.md 完成：

- 统一审计日志（public.audit_log）支持 before_json / after_json 前后快照，
  追加 prevent_audit_log_mutation 触发器保证 append-only，
  并将历史 work_record.wr_record_audit_event 数据迁移至新表。
- Audit 模块重写：AuditRecordCommand 兼容旧调用，新增
  AuditEvent / AuditChange / AuditJson（敏感字段脱敏 + 字段级 diff），
  AuditRepository 基于 NamedParameterJdbcTemplate，
  AuditService / AuditQueryService / AuditController 支持
  resourceType + resourceId 过滤。
- work-record 适配：WorkRecordAuditService 新增 recordChange（snapshot 模式）
  并保留旧 record 兼容入口；新增 WorkRecordAuditSnapshots 生成统一 Map
  快照、WorkRecordAuditActions 动作常量、WorkRecordFieldAuditService
  处理发布时字段级审计（create/update/disable）。
- 调整 WorkRecordService / WorkRecordTemplateService /
  WorkRecordTemplateVersionService 全部改用 recordChange 记录变更。
- 修正既有测试以匹配新的 UserPrincipal / UserAccount 签名，
  缓存 user() 实例避免 Mockito 身份比较失败。
- 补 WorkRecordAuditSnapshotsTest 与 WorkRecordFieldAuditServiceTest。

附带 Phase 13 收尾修正（calendar / dictionary / security / user），
使 mvn test 在 aiops-audit、aiops-work-record、aiops-platform 模块下
全部 BUILD SUCCESS。

Test:
  mvn -pl modules/aiops-audit test          -> 17/17
  mvn -pl modules/aiops-work-record test    -> 203/198 skipped=5 (docker)
  mvn -pl modules/aiops-platform test       -> 43/43

已知遗留（非本次范围）：
- aiops-security.UserPrincipal 参数数超 Checkstyle ParameterNumber 上限。
- jOOQ-codegen-maven 在 create or replace function 语法上的 Pro 特性限制，
  通过模块级 install 绕开。

Co-authored-by: Cursor <cursoragent@cursor.com>